chore: add config.js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <button class="btn btn-primary" onclick="loadData()">Загрузить данные</button>
     <div id="data-container" class="mt-4"></div>
 </div>
-
+<script src="config.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
